Changelog
=========

0.2 (Unrelease)
---------------


0.1.1 (2010-01-19)
------------------

* #2936 Fix relative path problems when using in production [voineali]


0.1 (2010-01-18)
----------------

* Initial release