@@ -1,0 +1,13 @@
+<configure
+  xmlns="http://namespaces.zope.org/zope"
+  xmlns:browser="http://namespaces.zope.org/browser"
+  i18n_domain="eea.faceted">
+
+  <browser:page
+    for="..interfaces.IFacetedHeritor"
+    name="faceted_version"
+    class=".browser.FacetedVersion"
+    permission="zope2.View"
+    />
+
+</configure>
